// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a disabled checkout button where cart is empty 1`] = `
<MiniBag
  cart={
    Object {
      "lineItems": Array [],
      "totalQuantity": 0,
    }
  }
  dispatch={[Function]}
>
  <div
    className="c-header__minibag"
  >
    <Link
      href="/cart"
    >
      <div
        className="c-minibag__cart"
        onClick={[Function]}
      >
        <a
          aria-label="View your cart"
        >
          <span
            className="c-minibag__cart-count"
          >
            (
            0
            )
          </span>
        </a>
        <div
          className="c-minibag__cart-label--small"
        >
          <a>
            Basket
          </a>
        </div>
        <div
          className="c-minibag__cart-label--large"
        >
          <a>
            View Your Bag
          </a>
        </div>
      </div>
    </Link>
    <div
      className="c-minibag__checkout"
    >
      <Link
        href=""
      >
        <a
          aria-label="Go to checkout"
          className="o-button o-button--primary o-button--lrg o-button--disabled"
          href=""
          onClick={[Function]}
        >
          CHECKOUT
        </a>
      </Link>
      <Link
        href="/account/login"
      >
        <a
          className="o-header__myaccount"
          href="/account/login"
          onClick={[Function]}
        >
          My Account
        </a>
      </Link>
    </div>
  </div>
</MiniBag>
`;

exports[`renders an active checkout button where cart has items 1`] = `
<MiniBag
  cart={
    Object {
      "lineItems": Array [
        Object {
          "discount": 0,
          "image_url": "",
          "price": 10,
          "productID": 1,
          "productSku": "1231",
          "quantity": 2,
          "size": "size - 8",
          "sku": "123",
          "title": "test",
        },
      ],
      "totalQuantity": 2,
    }
  }
  dispatch={[Function]}
>
  <div
    className="c-header__minibag"
  >
    <Link
      href="/cart"
    >
      <div
        className="c-minibag__cart"
        onClick={[Function]}
      >
        <a
          aria-label="View your cart"
        >
          <span
            className="c-minibag__cart-count"
          >
            (
            2
            )
          </span>
        </a>
        <div
          className="c-minibag__cart-label--small"
        >
          <a>
            Basket
          </a>
        </div>
        <div
          className="c-minibag__cart-label--large"
        >
          <a>
            View Your Bag
          </a>
        </div>
      </div>
    </Link>
    <div
      className="c-minibag__checkout"
    >
      <Link
        href="/checkout"
      >
        <a
          aria-label="Go to checkout"
          className="o-button o-button--primary o-button--lrg"
          href="/checkout"
          onClick={[Function]}
        >
          CHECKOUT
        </a>
      </Link>
      <Link
        href="/account/login"
      >
        <a
          className="o-header__myaccount"
          href="/account/login"
          onClick={[Function]}
        >
          My Account
        </a>
      </Link>
    </div>
  </div>
</MiniBag>
`;

exports[`renders the minibag links 1`] = `
<div
  className="c-header__minibag"
>
  <Link
    href="/cart"
  >
    <div
      className="c-minibag__cart"
    >
      <a
        aria-label="View your cart"
      >
        <span
          className="c-minibag__cart-count"
        >
          (
          0
          )
        </span>
      </a>
      <div
        className="c-minibag__cart-label--small"
      >
        <a>
          Basket
        </a>
      </div>
      <div
        className="c-minibag__cart-label--large"
      >
        <a>
          View Your Bag
        </a>
      </div>
    </div>
  </Link>
  <div
    className="c-minibag__checkout"
  >
    <Link
      href=""
    >
      <a
        aria-label="Go to checkout"
        className="o-button o-button--primary o-button--lrg o-button--disabled"
      >
        CHECKOUT
      </a>
    </Link>
    <Link
      href="/account/login"
    >
      <a
        className="o-header__myaccount"
      >
        My Account
      </a>
    </Link>
  </div>
</div>
`;
